@@ -218,9 +218,11 @@ my %oid_ifHCOutBroadcastPkts = ( name => "ifHCOutBroadcastPkts", mib => "IF-MIB"
 
 # Cisco specific OIDs
 # ------------------------------------------------------------------------
-my %oid_cisco_ChassisModel     = ( name => "ChassisModel",     mib => "CISCO-STACK-MIB",           oid => '1.3.6.1.4.1.9.5.1.2.16.0' ); # ex: WS-C3550-48-SMI
-my %oid_cisco_ChassisSrNumStr  = ( name => "ChassisSrNumStr",  mib => "CISCO-STACK-MIB",           oid => '1.3.6.1.4.1.9.5.1.2.19.0' ); # ex: CAT0645Z0HB
-my %oid_cisco_vmVlan           = ( name => "vmVlan",           mib => "CISCO-VLAN-MEMBERSHIP-MIB", oid => '1.3.6.1.4.1.9.9.68.1.2.2.1.2' ); # + ".?.<index>"
+my %oid_cisco_ChassisModel     = ( name => "ChassisModel",         mib => "CISCO-STACK-MIB",           oid => '1.3.6.1.4.1.9.5.1.2.16.0' );     # ex: WS-C3550-48-SMI
+my %oid_cisco_ChassisSrNumStr  = ( name => "ChassisSrNumStr",      mib => "CISCO-STACK-MIB",           oid => '1.3.6.1.4.1.9.5.1.2.19.0' );     # ex: CAT0645Z0HB
+my %oid_cisco_model            = ( name => "entPhysicalModelName", mib => "ENTITY-MIB",                oid => '1.3.6.1.2.1.47.1.1.1.1.13.1' );  # model. ex: CISCO2811
+my %oid_cisco_serial           = ( name => "entPhysicalSerialNum", mib => "ENTITY-MIB",                oid => '1.3.6.1.2.1.47.1.1.1.1.11.1' );  # serial number
+my %oid_cisco_vmVlan           = ( name => "vmVlan",               mib => "CISCO-VLAN-MEMBERSHIP-MIB", oid => '1.3.6.1.4.1.9.9.68.1.2.2.1.2' ); # + ".?.<index>"
 # NOT USED - my $oid_locIfIntBitsSec = '1.3.6.1.4.1.9.2.2.1.1.6';   # need to append integer for specific interface
 # NOT USED - my $oid_locIfOutBitsSec = '1.3.6.1.4.1.9.2.2.1.1.8';   # need to append integer for specific interface
 # NOT USED - my $cisco_ports         = '1.3.6.1.4.1.9.5.1.3.1.1.14.1'; # number of ports of the switch
@@ -803,8 +805,19 @@ if ($ghOptions{'nodetype'} eq "cisco") {
         $refhSNMPResult = GetDataWithSnmp (\%hOptions);
     };
     ExitPlugin($ERRORS{"UNKNOWN"}, add_oid_details($@->message(), [ \%oid_cisco_ChassisModel, \%oid_cisco_ChassisSrNumStr ])) if ($@);
-    $grefhCurrent->{MD}->{Node}->{cisco_type}   = "$refhSNMPResult->{$oid_cisco_ChassisModel{'oid'}}";
-    $grefhCurrent->{MD}->{Node}->{cisco_serial} = "$refhSNMPResult->{$oid_cisco_ChassisSrNumStr{'oid'}}";
+    if ($refhSNMPResult->{$oid_cisco_ChassisModel{'oid'}} eq "" and $refhSNMPResult->{$oid_cisco_ChassisSrNumStr{'oid'}} eq "") {
+        # looking at other info locations
+        eval {
+            my %hOptions = ( %ghSNMPOptions, (oids => [ "$oid_cisco_model{'oid'}","$oid_cisco_serial{'oid'}" ], cachetimer => $gLongCacheTimer, outputhashkeyidx => 0, checkempty => 0));
+            $refhSNMPResult = GetDataWithSnmp (\%hOptions);
+        };
+        ExitPlugin($ERRORS{"UNKNOWN"}, add_oid_details($@->message(), [ \%oid_cisco_model, \%oid_cisco_serial ])) if ($@);
+        $grefhCurrent->{MD}->{Node}->{cisco_type}   = "$refhSNMPResult->{$oid_cisco_model{'oid'}}";
+        $grefhCurrent->{MD}->{Node}->{cisco_serial} = "$refhSNMPResult->{$oid_cisco_serial{'oid'}}";
+    } else {
+        $grefhCurrent->{MD}->{Node}->{cisco_type}   = "$refhSNMPResult->{$oid_cisco_ChassisModel{'oid'}}";
+        $grefhCurrent->{MD}->{Node}->{cisco_serial} = "$refhSNMPResult->{$oid_cisco_ChassisSrNumStr{'oid'}}";
+    }
 }
 if ($ghOptions{'nodetype'} eq "netapp") {
     eval {
